--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
    
   </div>
   <a href="#tech" class="w3-bar-item w3-button w3-hide-small w3-hover-white">Technical Experience</a>
-  <a href="..\MLEE_PersonalSite\pdf\TechnicalResume2017.pdf" class="w3-bar-item w3-button w3-hide-small w3-hover-white">Resume</a>
+  <a href="..\mitchellrlee.github.io\MLEE_PersonalSite\pdf\TechnicalResume2017.pdf" class="w3-bar-item w3-button w3-hide-small w3-hover-white">Resume</a>
 
    </div>
 
@@ -38,7 +38,7 @@
 
 <!-- Image Header -->
 <div class="w3-display-container w3-animate-opacity">
-  <img src="..\MLEE_PersonalSite\images\coverPhoto.jpg" alt="boat" style="width:100%;min-height:350px;max-height:1100px;">
+  <img src="..\mitchellrlee.github.io\MLEE_PersonalSite\images\coverPhoto.jpg" alt="boat" style="width:100%;min-height:350px;max-height:1100px;">
   <div class="w3-container w3-display-bottomleft w3-margin-bottom">  
   </div>
 </div>
@@ -52,22 +52,22 @@
 <div class="w3-row"><br>
 
 <div class="w3-quarter">
-  <img src="..\MLEE_PersonalSite\images\camera.jpg" alt="Boss" style="width:200px; height: 150px;" class="w3-circle w3-hover-opacity">
+  <img src="..\mitchellrlee.github.io\MLEE_PersonalSite\images\camera.jpg" alt="Boss" style="width:200px; height: 150px;" class="w3-circle w3-hover-opacity">
   <h3>Photography</h3>
 </div>
 
 <div class="w3-quarter">
-  <img src="..\MLEE_PersonalSite\images\bike.jpg" alt="Boss" style="width:200px; height: 150px;" class="w3-circle w3-hover-opacity">
+  <img src="..\mitchellrlee.github.io\MLEE_PersonalSite\images\bike.jpg" alt="Boss" style="width:200px; height: 150px;" class="w3-circle w3-hover-opacity">
   <h3>Road Biking</h3>
 </div>
 
 <div class="w3-quarter">
-  <img src="..\MLEE_PersonalSite\images\bboy.jpg" alt="Boss" style="width:200px; height: 150px;" class="w3-circle w3-hover-opacity">
+  <img src="..\mitchellrlee.github.io\MLEE_PersonalSite\images\bboy.jpg" alt="Boss" style="width:200px; height: 150px;" class="w3-circle w3-hover-opacity">
   <h3>Dancing</h3>
 </div>
 
 <div class="w3-quarter">
-  <img src="..\MLEE_PersonalSite\images\baking.jpg" alt="Boss" style="width:200px; height: 150px;" class="w3-circle w3-hover-opacity">
+  <img src="..\mitchellrlee.github.io\MLEE_PersonalSite\images\baking.jpg" alt="Boss" style="width:200px; height: 150px;" class="w3-circle w3-hover-opacity">
   <h3>Baking</h3>
 </div>
 
@@ -92,7 +92,7 @@
 
 <div class="w3-quarter">
 <div class="w3-card-2 w3-white">
-  <img src="..\MLEE_PersonalSite\images\documentation.png" alt="Cinque Terre" style="width:100%">
+  <img src="..\mitchellrlee.github.io\MLEE_PersonalSite\images\documentation.png" alt="Cinque Terre" style="width:100%">
   <div class="w3-container">
   <h3>CWIRS Documentation</h3>
   <p>Assisted with modifying and testing Visual basic on Visual Studios.</p>
@@ -102,7 +102,7 @@
 
 <div class="w3-quarter">
 <div class="w3-card-2 w3-white">
-  <img src="..\MLEE_PersonalSite\images\vs.png" alt="Monterosso" style="width:100%">
+  <img src="..\mitchellrlee.github.io\MLEE_PersonalSite\images\vs.png" alt="Monterosso" style="width:100%">
   <div class="w3-container">
   <h3>CIS 451</h3>
   <p>Created Breadcrumbs, Mail, Shopping Cart Functions.</p>
@@ -111,7 +111,7 @@
 </div>
 <div class="w3-quarter">
 <div class="w3-card-2 w3-white">
-  <img src="..\MLEE_PersonalSite\images\orangeChicken.jpg" alt="Monterosso" style="width:100%">
+  <img src="..\mitchellrlee.github.io\MLEE_PersonalSite\images\orangeChicken.jpg" alt="Monterosso" style="width:100%">
   <div class="w3-container">
   <h3>Panda Express Button</h3>
   <p>Assisted with creation of Orange Chicken with bacon button.</p>
