--- a/index.html
+++ b/index.html
@@ -52,22 +52,22 @@
 <div class="w3-row"><br>
 
 <div class="w3-quarter">
-  <img src="mitchellrlee.github.io\images\camera.JPG" alt="Boss" style="width:200px; height: 150px;" class="w3-circle w3-hover-opacity">
+  <img src="mitchellrlee.github.io\images\camera.JPG" alt="camera" style="width:200px; height: 150px;" class="w3-circle w3-hover-opacity">
   <h3>Photography</h3>
 </div>
 
 <div class="w3-quarter">
-  <img src="mitchellrlee.github.io\images\bike.jpg" alt="Boss" style="width:200px; height: 150px;" class="w3-circle w3-hover-opacity">
+  <img src="mitchellrlee.github.io\images\bike.JPG" alt="bike" style="width:200px; height: 150px;" class="w3-circle w3-hover-opacity">
   <h3>Road Biking</h3>
 </div>
 
 <div class="w3-quarter">
-  <img src="mitchellrlee.github.io\images\bboy.jpg" alt="Boss" style="width:200px; height: 150px;" class="w3-circle w3-hover-opacity">
+  <img src="mitchellrlee.github.io\images\bboy.JPG" alt="dance" style="width:200px; height: 150px;" class="w3-circle w3-hover-opacity">
   <h3>Dancing</h3>
 </div>
 
 <div class="w3-quarter">
-  <img src="mitchellrlee.github.io\images\baking.jpg" alt="Boss" style="width:200px; height: 150px;" class="w3-circle w3-hover-opacity">
+  <img src="mitchellrlee.github.io\images\baking.JPGS" alt="cake" style="width:200px; height: 150px;" class="w3-circle w3-hover-opacity">
   <h3>Baking</h3>
 </div>
 
@@ -82,7 +82,7 @@
 
 <div class="w3-quarter">
 <div class="w3-card-2 w3-white">
-  <a href="mitchellrlee.github.io\class.html"><img src="..\MLEE_PersonalSite\images\shopify.png" alt="Vernazza" style="width:100%"></a>
+  <a href="mitchellrlee.github.io\class.html"><img src="..\MLEE_PersonalSite\images\shopify.png" alt="Shopify" style="width:100%"></a>
   <div class="w3-container">
   <h3>Shopify Implentation</h3>
   <p> Migrated many products to Shopify platform for Senior Project.</p>
@@ -92,7 +92,7 @@
 
 <div class="w3-quarter">
 <div class="w3-card-2 w3-white">
-  <img src="mitchellrlee.github.io\images\documentation.png" alt="Cinque Terre" style="width:100%">
+  <img src="mitchellrlee.github.io\images\documentation.png" alt="Documentation" style="width:100%">
   <div class="w3-container">
   <h3>CWIRS Documentation</h3>
   <p>Assisted with modifying and testing Visual basic on Visual Studios.</p>
@@ -102,7 +102,7 @@
 
 <div class="w3-quarter">
 <div class="w3-card-2 w3-white">
-  <img src="mitchellrlee.github.io\images\vs.png" alt="Monterosso" style="width:100%">
+  <img src="mitchellrlee.github.io\images\vs.png" alt="Visual Studios" style="width:100%">
   <div class="w3-container">
   <h3>CIS 451</h3>
   <p>Created Breadcrumbs, Mail, Shopping Cart Functions.</p>
@@ -111,7 +111,7 @@
 </div>
 <div class="w3-quarter">
 <div class="w3-card-2 w3-white">
-  <img src="mitchellrlee.github.io\orangeChicken.jpg" alt="Monterosso" style="width:100%">
+  <img src="mitchellrlee.github.io\orangeChicken.jpg" alt="Panda Express" style="width:100%">
   <div class="w3-container">
   <h3>Panda Express Button</h3>
   <p>Assisted with creation of Orange Chicken with bacon button.</p>
