--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
 <!-- Image Header -->
 <div class="w3-display-container w3-animate-opacity">
-  <img src="mitchellrlee.github.io\images\coverPhoto.JPG" alt="CoverPhoto" style="width:100%;min-height:350px;max-height:1100px;">
+  <img src="\coverPhoto.JPG" alt="CoverPhoto" style="width:100%;min-height:350px;max-height:1100px;">
   <div class="w3-container w3-display-bottomleft w3-margin-bottom">  
   </div>
 </div>
