--- a/index.html
+++ b/index.html
@@ -52,12 +52,12 @@
 <div class="w3-row"><br>
 
 <div class="w3-quarter">
-  <img src="mitchellrlee.github.io\images\camera.JPG" alt="camera" style="width:200px; height: 150px;" class="w3-circle w3-hover-opacity">
+  <img src="mitchellrlee.github.io/images/camera.jpg" alt="camera" style="width:200px; height: 150px;" class="w3-circle w3-hover-opacity">
   <h3>Photography</h3>
 </div>
 
 <div class="w3-quarter">
-  <img src="mitchellrlee.github.io\images\bike.JPG" alt="bike" style="width:200px; height: 150px;" class="w3-circle w3-hover-opacity">
+  <img src="mitchellrlee.github.io/images/bike.jpg" alt="bike" style="width:200px; height: 150px;" class="w3-circle w3-hover-opacity">
   <h3>Road Biking</h3>
 </div>
 
