--- a/class.html
+++ b/class.html
@@ -21,7 +21,7 @@
    
   </div>
   <a href="#tech" class="w3-bar-item w3-button w3-hide-small w3-hover-white">Technical Experience</a>
-  <a href="..\MLEE_PersonalSite\pdf\TechnicalResume2017.pdf" class="w3-bar-item w3-button w3-hide-small w3-hover-white">Resume</a>
+  <a href="mitchellrlee.github.io/pdf/TechnicalResume2017.pdf" class="w3-bar-item w3-button w3-hide-small w3-hover-white">Resume</a>
 
    </div>
 
@@ -40,7 +40,7 @@
   <div class="w3-card-4 w3-white">
     <div class="w3-center">
       <h1>CIS 466: Senior Project Shopify</h1>
-      <a href="https://isafetyzone-com.myshopify.com/"><img src="..\MLEE_PersonalSite\images\shopify_1.png" alt="Vernazza" style="width:1300px;height: 600px;"              class="w3-round"></a>
+      <a href="https://isafetyzone-com.myshopify.com/"><img src="mitchellrlee.github.io/images/shopify_1.png" alt="Vernazza" style="width:1300px;height: 600px;"              class="w3-round"></a>
     </div>
      <div class="w3-container">
         <h3>Shopify Implentation</h3>
@@ -52,11 +52,11 @@
  
     <br><br>
       <div class="w3-center">
-      <img src="..\MLEE_PersonalSite\images\shopify_2.png" alt="Vernazza" style="width:px;height: 600px;" class="w3-round">
+      <img src="mitchellrlee.github.io/images/shopify_2.png" alt="Vernazza" style="width:px;height: 600px;" class="w3-round">
     </div><br>
 
 <div class="w3-center">
-      <img src="..\MLEE_PersonalSite\images\shopify_3.png" alt="Vernazza" style="width:px;height: 600px;" class="w3-round">
+      <img src="mitchellrlee.github.io/images/shopify_3.png" alt="Vernazza" style="width:px;height: 600px;" class="w3-round">
     </div>
 
 
