--- a/class.html
+++ b/class.html
@@ -13,7 +13,7 @@
  <div class="w3-bar w3-theme-d2 w3-left-align">
   <a class="w3-bar-item w3-button w3-hide-medium w3-hide-large w3-right w3-hover-white w3-theme-d2" href="javascript:void(0);" onclick="openNav()"><i class="fa fa-bars"></i></a>
 
-  <a href="index.html" class="w3-bar-item w3-button w3-teal"><i class="fa fa-home w3-margin-right"></i>Home</a>
+  <a href="mitchellrlee.github.io" class="w3-bar-item w3-button w3-teal"><i class="fa fa-home w3-margin-right"></i>Home</a>
   <a href="#mitchell" class="w3-bar-item w3-button w3-hide-small w3-hover-white">Mitchell Lee</a>
          <div class="w3-dropdown-hover w3-hide-small">
     <a href="#recent"><button class="w3-button" title="Notifications">Recent Projects </button> 
