--- a/index.html
+++ b/index.html
@@ -62,12 +62,12 @@
 </div>
 
 <div class="w3-quarter">
-  <img src="mitchellrlee.github.io/images/bboy.jpg" alt="dance" style="width:200px; height: 150px;" class="w3-circle w3-hover-opacity">
+  <img src="mitchellrlee.github.io/images/bboy.JPG" alt="dance" style="width:200px; height: 150px;" class="w3-circle w3-hover-opacity">
   <h3>Dancing</h3>
 </div>
 
 <div class="w3-quarter">
-  <img src="mitchellrlee.github.io/images/baking.jpg" alt="cake" style="width:200px; height: 150px;" class="w3-circle w3-hover-opacity">
+  <img src="mitchellrlee.github.io/images/baking.JPG" alt="cake" style="width:200px; height: 150px;" class="w3-circle w3-hover-opacity">
   <h3>Baking</h3>
 </div>
 
@@ -102,7 +102,7 @@
 
 <div class="w3-quarter">
 <div class="w3-card-2 w3-white">
-  <img src="mitchellrlee.github.io/images/vs.png" alt="Visual Studios" style="width:100%">
+  <img src="mitchellrlee.github.io/images/VS.png" alt="Visual Studios" style="width:100%">
   <div class="w3-container">
   <h3>CIS 451</h3>
   <p>Created Breadcrumbs, Mail, Shopping Cart Functions.</p>
@@ -111,7 +111,7 @@
 </div>
 <div class="w3-quarter">
 <div class="w3-card-2 w3-white">
-  <img src="mitchellrlee.github.io/orangeChicken.jpg" alt="Panda Express" style="width:100%">
+  <img src="mitchellrlee.github.io/images/orangeChicken.jpg" alt="Panda Express" style="width:100%">
   <div class="w3-container">
   <h3>Panda Express Button</h3>
   <p>Assisted with creation of Orange Chicken with bacon button.</p>
