--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 
 <div class="w3-quarter">
 <div class="w3-card-2 w3-white">
-  ><img src="mitchellrlee.github.io/images/shopify.png" alt="Shopify" style="width:100%">
+  <img src="mitchellrlee.github.io/images/shopify.png" alt="Shopify" style="width:100%">
   <div class="w3-container">
   <h3>Shopify Implentation</h3>
   <p> Migrated many products to Shopify platform for Senior Project.</p>
