--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
   <!-- Navbar on small screens -->
   <div id="navDemo" class="w3-bar-block w3-theme-d2 w3-hide w3-hide-large w3-hide-medium">
     <a href="#mitchell" class="w3-bar-item w3-button">Mitchell Lee</a>
-    <a href="#tech" class="w3-bar-item w3-button">Technical Experience</a>
-    <a href="#pricing" class="w3-bar-item w3-button">Resume</a>
     <a href="#recent" class="w3-bar-item w3-button">Recent Projects</a>
+    <a href="#tech" class="w3-bar-item w3-button">Technical Experience</a>
+    <a href="mitchellrlee.github.io\pdf\TechnicalResume2017.pdf" class="w3-bar-item w3-button">Resume</a>
 
   </div>
 </div>
