--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
 <div class="w3-row-padding w3-center w3-padding-64" id="tech">
     <h2>Technical Experience</h2>
     <div class="w3-third w3-margin-bottom">
-      <ul class="w3-ul w3-border w3-hover-shadow">
+      <ul class="w3-ul w3-border">
         <li class="w3-theme">
           <p class="w3-xlarge">Languages</p>
         </li>
@@ -144,7 +144,7 @@
     </div>
 
     <div class="w3-third w3-margin-bottom">
-      <ul class="w3-ul w3-border w3-hover-shadow">
+      <ul class="w3-ul w3-border">
         <li class="w3-theme">
           <p class="w3-xlarge">Microsoft</p>
         </li>
@@ -160,7 +160,7 @@
     </div>
 
     <div class="w3-third w3-margin-bottom">
-      <ul class="w3-ul w3-border w3-hover-shadow">
+      <ul class="w3-ul w3-border">
         <li class="w3-theme">
           <p class="w3-xlarge">Programs</p>
         </li>
