--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <a href="#mitchell" class="w3-bar-item w3-button">Mitchell Lee</a>
     <a href="#recent" class="w3-bar-item w3-button">Recent Projects</a>
     <a href="#tech" class="w3-bar-item w3-button">Technical Experience</a>
-    <a href="mitchellrlee.github.io\pdf\TechnicalResume2017.pdf" class="w3-bar-item w3-button">Resume</a>
+    <a href="mitchellrlee.github.io\resume.html" class="w3-bar-item w3-button">Resume</a>
 
   </div>
 </div>
@@ -83,7 +83,7 @@
 <div class="w3-quarter">
 <div class="w3-card-2 w3-white">
   <img src="mitchellrlee.github.io/images/shopify.png" alt="Shopify" style="width:100%">
-  <div class="w3-container">
+  <div class="w3-container w3-hover-shadow">
   <h3>Shopify Implentation</h3>
   <p> Migrated many products to Shopify platform for Senior Project.</p>
   </div>
@@ -91,7 +91,7 @@
 </div>
 
 <div class="w3-quarter">
-<div class="w3-card-2 w3-white">
+<div class="w3-card-2 w3-white w3-hover-shadow">
   <img src="mitchellrlee.github.io/images/documentation.png" alt="Documentation" style="width:100%">
   <div class="w3-container">
   <h3>CWIRS Documentation</h3>
@@ -101,7 +101,7 @@
 </div>
 
 <div class="w3-quarter">
-<div class="w3-card-2 w3-white">
+<div class="w3-card-2 w3-white w3-hover-shadow">
   <img src="mitchellrlee.github.io/images/VS.png" alt="Visual Studios" style="width:100%">
   <div class="w3-container">
   <h3>CIS 451</h3>
@@ -110,7 +110,7 @@
   </div>
 </div>
 <div class="w3-quarter">
-<div class="w3-card-2 w3-white">
+<div class="w3-card-2 w3-white w3-hover-shadow">
   <img src="mitchellrlee.github.io/images/orangeChicken.jpg" alt="Panda Express" style="width:100%">
   <div class="w3-container">
   <h3>Panda Express Button</h3>
