--- a/index.html
+++ b/index.html
@@ -51,23 +51,23 @@
 
 <div class="w3-row"><br>
 
-<div class="w3-quarter">
-  <img src="mitchellrlee.github.io/images/camera.jpg" alt="camera" style="width:200px; height: 150px;" class="w3-circle w3-hover-opacity">
+<div class="w3-quarter w3-hover-opacity">
+  <img src="mitchellrlee.github.io/images/camera.jpg" alt="camera" style="width:200px; height: 150px;" class="w3-circle">
   <h3>Photography</h3>
 </div>
 
-<div class="w3-quarter">
-  <img src="mitchellrlee.github.io/images/bike.jpg" alt="bike" style="width:200px; height: 150px;" class="w3-circle w3-hover-opacity">
+<div class="w3-quarter w3-hover-opacity"> 
+ <img src="mitchellrlee.github.io/images/bike.jpg" alt="bike" style="width:200px; height: 150px;" class="w3-circle">
   <h3>Road Biking</h3>
 </div>
 
-<div class="w3-quarter">
-  <img src="mitchellrlee.github.io/images/bboy.JPG" alt="dance" style="width:200px; height: 150px;" class="w3-circle w3-hover-opacity">
+<div class="w3-quarter w3-hover-opacity">  
+<img src="mitchellrlee.github.io/images/bboy.JPG" alt="dance" style="width:200px; height: 150px;" class="w3-circle">
   <h3>Dancing</h3>
 </div>
 
-<div class="w3-quarter">
-  <img src="mitchellrlee.github.io/images/baking.JPG" alt="cake" style="width:200px; height: 150px;" class="w3-circle w3-hover-opacity">
+<div class="w3-quarter w3-hover-opacity">
+  <img src="mitchellrlee.github.io/images/baking.JPG" alt="cake" style="width:200px; height: 150px;" class="w3-circle">
   <h3>Baking</h3>
 </div>
 
