--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
    
   </div>
   <a href="#tech" class="w3-bar-item w3-button w3-hide-small w3-hover-white">Technical Experience</a>
-  <a href="mitchellrlee.github.io\pdf\TechnicalResume2017.pdf" class="w3-bar-item w3-button w3-hide-small w3-hover-white">Resume</a>
+  <a href="mitchellrlee.github.io/resume.html" class="w3-bar-item w3-button w3-hide-small w3-hover-white">Resume</a>
 
    </div>
 
