--- a/index.html
+++ b/index.html
@@ -80,18 +80,18 @@
 <h2>Projects</h2>
 </div>
 
-<div class="w3-quarter">
+<div class="w3-quarter w3-hover-shadow">
 <div class="w3-card-2 w3-white">
   <img src="mitchellrlee.github.io/images/shopify.png" alt="Shopify" style="width:100%">
-  <div class="w3-container w3-hover-shadow">
+  <div class="w3-container">
   <h3>Shopify Implentation</h3>
   <p> Migrated many products to Shopify platform for Senior Project.</p>
   </div>
   </div>
 </div>
 
-<div class="w3-quarter">
-<div class="w3-card-2 w3-white w3-hover-shadow">
+<div class="w3-quarter w3-hover-shadow">
+<div class="w3-card-2 w3-white">
   <img src="mitchellrlee.github.io/images/documentation.png" alt="Documentation" style="width:100%">
   <div class="w3-container">
   <h3>CWIRS Documentation</h3>
@@ -100,8 +100,8 @@
   </div>
 </div>
 
-<div class="w3-quarter">
-<div class="w3-card-2 w3-white w3-hover-shadow">
+<div class="w3-quarter w3-hover-shadow">
+<div class="w3-card-2 w3-white">
   <img src="mitchellrlee.github.io/images/VS.png" alt="Visual Studios" style="width:100%">
   <div class="w3-container">
   <h3>CIS 451</h3>
@@ -109,8 +109,8 @@
   </div>
   </div>
 </div>
-<div class="w3-quarter">
-<div class="w3-card-2 w3-white w3-hover-shadow">
+<div class="w3-quarter w3-hover-shadow">
+<div class="w3-card-2 w3-white ">
   <img src="mitchellrlee.github.io/images/orangeChicken.jpg" alt="Panda Express" style="width:100%">
   <div class="w3-container">
   <h3>Panda Express Button</h3>
