--- a/resume.html
+++ b/resume.html
@@ -14,37 +14,31 @@
 <div class="w3-top">
  <div class="w3-bar w3-theme-d2 w3-left-align">
   <a class="w3-bar-item w3-button w3-hide-medium w3-hide-large w3-right w3-hover-white w3-theme-d2" href="javascript:void(0);" onclick="openNav()"><i class="fa fa-bars"></i></a>
-  <a href="homeTesting2.html" class="w3-bar-item w3-button w3-teal"><i class="fa fa-home w3-margin-right"></i>Home</a>
-  <a href="homeTesting2.html#mitchell" class="w3-bar-item w3-button w3-hide-small w3-hover-white">Mitchell Lee</a>
-      <div class="w3-dropdown-hover w3-hide-small">
-    <a href="homeTesting2.html#recent"><button class="w3-button" title="Notifications">Recent Projects </button>  </a>   
 
-  </div>
-  <a href="homeTesting2.html#tech" class="w3-bar-item w3-button w3-hide-small w3-hover-white">Technical Experience</a>
-  <a href="C:\Users\Mitchell Lee\Desktop\Personal Site\resume.html" class="w3-bar-item w3-button w3-hide-small w3-hover-white">Resume</a>
-    <a href="C:\Users\Mitchell Lee\Desktop\Personal Site\class.html" class="w3-bar-item w3-button w3-hide-small w3-hover-white">Projects</a>
-
+  <a href="mitchellrlee.github.io\index.html" class="w3-bar-item w3-button w3-teal"><i class="fa fa-home w3-margin-right"></i>Home</a>
+  <a href="mitchellrlee.github.io\#mitchell" class="w3-bar-item w3-button w3-hide-small w3-hover-white">Mitchell Lee</a>
+         <div class="w3-dropdown-hover w3-hide-small">
+    <a href="mitchellrlee.github.io\resume.html"><button class="w3-button" title="Notifications">Recent Projects </button> 
+   </a>   
    
+  </div>
+  <a href="mitchellrlee.github.io\#tech" class="w3-bar-item w3-button w3-hide-small w3-hover-white">Technical Experience</a>
+  <a href="mitchellrlee.github.io\#resume" class="w3-bar-item w3-button w3-hide-small w3-hover-white">Resume</a>
 
    </div>
 
   <!-- Navbar on small screens -->
   <div id="navDemo" class="w3-bar-block w3-theme-d2 w3-hide w3-hide-large w3-hide-medium">
-    <a href="#mitchell" class="w3-bar-item w3-button">Mitchell Lee</a>
-    <a href="#tech" class="w3-bar-item w3-button">Technical Experience</a>
-    <a href="#pricing" class="w3-bar-item w3-button">Resume</a>
-    <a href="#recent" class="w3-bar-item w3-button">Recent Projects</a>
+   <a href="mitchellrlee.github.io\index.html" class="w3-bar-item w3-button w3-teal"><i class="fa fa-home w3-margin-right"></i>Home</a>
+    <a href="mitchellrlee.github.io\#mitchell" class="w3-bar-item w3-button">Mitchell Lee</a>
+    <a href="mitchellrlee.github.io\#recent" class="w3-bar-item w3-button">Recent Projects</a>
+    <a href="mitchellrlee.github.io\#tech" class="w3-bar-item w3-button">Technical Experience</a>
+    <a href="mitchellrlee.github.io\resume.html" class="w3-bar-item w3-button">Resume</a>
 
   </div>
 </div>
 
 <!-- Image Header -->
-<div class="w3-display-container w3-animate-opacity">
-  <div class="w3-container w3-display-bottomleft w3-margin-bottom">  
-  </div>
-</div>
-
-
 
 
 
@@ -57,8 +51,8 @@
     <div class="w3-third">
     
       <div class="w3-white w3-text-grey w3-card-4">
-        <div class="w3-display-container">
-          <img src="..\MLEE_PersonalSite\images\resumePhoto.JPG" style="width:100%" alt="Avatar">
+        <div class="w3-display-container" id="resume">
+          <img src="mitchellrlee.github.io\images\resumePhoto.JPG" style="width:100%" alt="Avatar">
            
         </div>
         <div class="w3-container">
