--- a/resume.html
+++ b/resume.html
@@ -52,7 +52,7 @@
     
       <div class="w3-white w3-text-grey w3-card-4">
         <div class="w3-display-container" id="resume">
-          <img src="mitchellrlee.github.io\images\resumePhoto.JPG" style="width:100%" alt="Avatar">
+          <img src="mitchellrlee.github.io/images/resumePhoto.JPG" style="width:100%" alt="Avatar">
            
         </div>
         <div class="w3-container">
