--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <a href="#recent"><button class="w3-button" title="Notifications">Recent Projects </button></a>   
       </div>
     <a href="#tech" class="w3-bar-item w3-button w3-hide-small w3-hover-white">Technical Experience</a>
-    <a href="mitchellrlee.github.io/resume.html" class="w3-bar-item w3-button w3-hide-small w3-hover-white">Resume</a>
+    <a href="/resume.html" class="w3-bar-item w3-button w3-hide-small w3-hover-white">Resume</a>
   </div>
 
   <!-- Navbar on small screens -->
@@ -26,7 +26,7 @@
     <a href="#mitchell" class="w3-bar-item w3-button">Mitchell Lee</a>
     <a href="#recent" class="w3-bar-item w3-button">Recent Projects</a>
     <a href="#tech" class="w3-bar-item w3-button">Technical Experience</a>
-    <a href="mitchellrlee.github.io\resume.html" class="w3-bar-item w3-button">Resume</a>
+    <a href="/resume.html" class="w3-bar-item w3-button">Resume</a>
   </div>
 </div>
 
