--- a/resume.html
+++ b/resume.html
@@ -16,24 +16,24 @@
   <a class="w3-bar-item w3-button w3-hide-medium w3-hide-large w3-right w3-hover-white w3-theme-d2" href="javascript:void(0);" onclick="openNav()"><i class="fa fa-bars"></i></a>
 
   <a href="index.html" class="w3-bar-item w3-button w3-teal"><i class="fa fa-home w3-margin-right"></i>Home</a>
-  <a href="mitchellrlee.github.io\#mitchell" class="w3-bar-item w3-button w3-hide-small w3-hover-white">Mitchell Lee</a>
+  <a href="#mitchell" class="w3-bar-item w3-button w3-hide-small w3-hover-white">Mitchell Lee</a>
          <div class="w3-dropdown-hover w3-hide-small">
-    <a href="mitchellrlee.github.io\resume.html"><button class="w3-button" title="Notifications">Recent Projects </button> 
+    <a href="resume.html"><button class="w3-button" title="Notifications">Recent Projects </button> 
    </a>   
    
   </div>
-  <a href="mitchellrlee.github.io\#tech" class="w3-bar-item w3-button w3-hide-small w3-hover-white">Technical Experience</a>
-  <a href="mitchellrlee.github.io\#resume" class="w3-bar-item w3-button w3-hide-small w3-hover-white">Resume</a>
+  <a href="#tech" class="w3-bar-item w3-button w3-hide-small w3-hover-white">Technical Experience</a>
+  <a href="#resume" class="w3-bar-item w3-button w3-hide-small w3-hover-white">Resume</a>
 
    </div>
 
   <!-- Navbar on small screens -->
   <div id="navDemo" class="w3-bar-block w3-theme-d2 w3-hide w3-hide-large w3-hide-medium">
-   <a href="mitchellrlee.github.io\index.html" class="w3-bar-item w3-button w3-teal"><i class="fa fa-home w3-margin-right"></i>Home</a>
-    <a href="mitchellrlee.github.io\#mitchell" class="w3-bar-item w3-button">Mitchell Lee</a>
-    <a href="mitchellrlee.github.io\#recent" class="w3-bar-item w3-button">Recent Projects</a>
-    <a href="mitchellrlee.github.io\#tech" class="w3-bar-item w3-button">Technical Experience</a>
-    <a href="mitchellrlee.github.io\resume.html" class="w3-bar-item w3-button">Resume</a>
+   <a href="index.html" class="w3-bar-item w3-button w3-teal"><i class="fa fa-home w3-margin-right"></i>Home</a>
+    <a href="#mitchell" class="w3-bar-item w3-button">Mitchell Lee</a>
+    <a href="#recent" class="w3-bar-item w3-button">Recent Projects</a>
+    <a href="#tech" class="w3-bar-item w3-button">Technical Experience</a>
+    <a href="resume.html" class="w3-bar-item w3-button">Resume</a>
 
   </div>
 </div>
