--- a/resume.html
+++ b/resume.html
@@ -57,9 +57,7 @@
         </div>
         <div class="w3-container">
           <p><i class="fa fa-home fa-fw w3-margin-right w3-large w3-text-teal"></i>Mitchell Lee</p>
-          <p><i class="fa fa-home fa-fw w3-margin-right w3-large w3-text-teal"></i>Alhambra, Ca</p>
-          <p><i class="fa fa-envelope fa-fw w3-margin-right w3-large w3-text-teal"></i>mitchellrlee1@gmail.com</p>
-          <p><i class="fa fa-phone fa-fw w3-margin-right w3-large w3-text-teal"></i>626-688-5053</p>
+          <p><i class="fa fa-envelope fa-fw w3-margin-right w3-large w3-text-teal"></i>mlee2008r@yahoo.com</p>
           <hr>
 
           <p class="w3-large"><b><i class="fa fa-asterisk fa-fw w3-margin-right w3-text-teal"></i>Skills</b></p>
@@ -101,18 +99,21 @@
         <h2 class="w3-text-grey w3-padding-16"><i class="fa fa-suitcase fa-fw w3-margin-right w3-xxlarge w3-text-teal"></i>Work Experience</h2>
         <div class="w3-container">
           <h5 class="w3-opacity"><b>Student Professional Worker Information Technology</b></h5>
+          <h5 class="w3-opacity"><b>La County ISD</b></h5>
           <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Nov. 2016 - <span class="w3-tag w3-teal w3-round">Current</span></h6>
           <p>Assists with installing, configuring and maintaining consoles for users. Works with manager on monthly EA reports. Works with telecommunication engineer on documentation project for all of the radio systems CWIRS.</p>
           <hr>
         </div>
         <div class="w3-container">
           <h5 class="w3-opacity"><b>Information Systems Intern</b></h5>
+          <h5 class="w3-opacity"><b>Panda Restaurant Group</b></h5>
           <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Summer 2015</h6>
           <p>Had the opportunity to shadow every department under Information Systems at Panda Restaurant Group. Wrote and tested scripts to deploy to all stores for new menu items and retrieving data. Conducted research on recovering hard drives for Disaster Recovery.</p>
           <hr>
         </div>
         <div class="w3-container">
           <h5 class="w3-opacity"><b>Cook/Cashier</b></h5>
+          <h5 class="w3-opacity"><b>Panda Express</b></h5>
           <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>July 2014 - May 2016</h6>
           <p>Worked in the kitchen with prepping, cooking, preparing, and cleaning. Cross trained in the front of the house to talk to customers, handle cash at register, and count daily profits.</p><br>
         </div>
