--- a/resume.html
+++ b/resume.html
@@ -16,24 +16,24 @@
   <a class="w3-bar-item w3-button w3-hide-medium w3-hide-large w3-right w3-hover-white w3-theme-d2" href="javascript:void(0);" onclick="openNav()"><i class="fa fa-bars"></i></a>
 
   <a href="index.html" class="w3-bar-item w3-button w3-teal"><i class="fa fa-home w3-margin-right"></i>Home</a>
-  <a href="index.html/#mitchell" class="w3-bar-item w3-button w3-hide-small w3-hover-white">Mitchell Lee</a>
+  <a href="/#mitchell" class="w3-bar-item w3-button w3-hide-small w3-hover-white">Mitchell Lee</a>
          <div class="w3-dropdown-hover w3-hide-small">
-    <a href="index.html/resume.html"><button class="w3-button" title="Notifications">Recent Projects </button> 
+    <a href="/resume.html"><button class="w3-button" title="Notifications">Recent Projects </button> 
    </a>   
    
   </div>
-  <a href="index.html/#tech" class="w3-bar-item w3-button w3-hide-small w3-hover-white">Technical Experience</a>
-  <a href="index.html/#resume" class="w3-bar-item w3-button w3-hide-small w3-hover-white">Resume</a>
+  <a href="/#tech" class="w3-bar-item w3-button w3-hide-small w3-hover-white">Technical Experience</a>
+  <a href="/#resume" class="w3-bar-item w3-button w3-hide-small w3-hover-white">Resume</a>
 
    </div>
 
   <!-- Navbar on small screens -->
   <div id="navDemo" class="w3-bar-block w3-theme-d2 w3-hide w3-hide-large w3-hide-medium">
    <a href="index.html" class="w3-bar-item w3-button w3-teal"><i class="fa fa-home w3-margin-right"></i>Home</a>
-    <a href="index.html/#mitchell" class="w3-bar-item w3-button">Mitchell Lee</a>
-    <a href="index.html/#recent" class="w3-bar-item w3-button">Recent Projects</a>
-    <a href="index.html/#tech" class="w3-bar-item w3-button">Technical Experience</a>
-    <a href="index.html/resume.html" class="w3-bar-item w3-button">Resume</a>
+    <a href="/#mitchell" class="w3-bar-item w3-button">Mitchell Lee</a>
+    <a href="/#recent" class="w3-bar-item w3-button">Recent Projects</a>
+    <a href="/#tech" class="w3-bar-item w3-button">Technical Experience</a>
+    <a href="/resume.html" class="w3-bar-item w3-button">Resume</a>
 
   </div>
 </div>
@@ -52,7 +52,7 @@
     
       <div class="w3-white w3-text-grey w3-card-4">
         <div class="w3-display-container" id="resume">
-          <img src="mitchellrlee.github.io/images/resumePhoto.JPG" style="width:100%" alt="Avatar">
+          <img class="w3-animate-zoom" src="mitchellrlee.github.io/images/resumePhoto.JPG" style="width:100%" alt="Avatar">
            
         </div>
         <div class="w3-container">
