--- a/index.html
+++ b/index.html
@@ -43,19 +43,19 @@
   <h2>About Me</h2>
     <p>Hi all, I just graduated from Cal Poly Pomona as a Business Major in Computer Information Systems. A few of my interests outside of programming are photography, bike riding, dancing, and cooking!</p>
   <div class="w3-row"><br>
-    <div class="w3-quarter w3-hover-opacity">
+    <div class="w3-quarter w3-hover-opacity w3-animate-left">
       <img src="mitchellrlee.github.io/images/camera.jpg" alt="camera" style="width:200px; height: 150px;" class="w3-circle">
       <h3>Photography</h3>
     </div>
-    <div class="w3-quarter w3-hover-opacity"> 
+    <div class="w3-quarter w3-hover-opacity w3-animate-top"> 
       <img src="mitchellrlee.github.io/images/bike.jpg" alt="bike" style="width:200px; height: 150px;" class="w3-circle">
       <h3>Road Biking</h3>
     </div>
-    <div class="w3-quarter w3-hover-opacity">  
+    <div class="w3-quarter w3-hover-opacity w3-animate-bottom">  
       <img src="mitchellrlee.github.io/images/bboy.JPG" alt="dance" style="width:200px; height: 150px;" class="w3-circle">
       <h3>Dancing</h3>
     </div>
-    <div class="w3-quarter w3-hover-opacity">
+    <div class="w3-quarter w3-hover-opacity w3-animate-right">
       <img src="mitchellrlee.github.io/images/baking.JPG" alt="cake" style="width:200px; height: 150px;" class="w3-circle">
       <h3>Baking</h3>
     </div>
@@ -63,11 +63,11 @@
 </div>
 
 <!-- Projects Row -->
-<div class="w3-row-padding w3-padding-16 w3-theme-l1" id="recent">
+<div class="w3-row-padding w3-padding-16 w3-theme-l1 w3-hover-shadow" id="recent">
   <div class="w3-center">
     <h2>Projects</h2>
   </div>
-    <div class="w3-quarter w3-hover-shadow">
+    <div class="w3-quarter w3-animate-opacity">
       <div class="w3-card-2 w3-white">
         <img src="mitchellrlee.github.io/images/shopify.png" alt="Shopify" style="width:100%">
           <div class="w3-container">
@@ -76,7 +76,7 @@
           </div>
       </div>
     </div>
-    <div class="w3-quarter w3-hover-shadow">
+    <div class="w3-quarter w3-animate-opacity">
       <div class="w3-card-2 w3-white">
         <img src="mitchellrlee.github.io/images/documentation.png" alt="Documentation" style="width:100%">
           <div class="w3-container">
@@ -85,7 +85,7 @@
         </div>
       </div>
     </div>
-    <div class="w3-quarter w3-hover-shadow">
+    <div class="w3-quarter w3-animate-opacity">
       <div class="w3-card-2 w3-white">
         <img src="mitchellrlee.github.io/images/VS.png" alt="Visual Studios" style="width:100%">
           <div class="w3-container">
@@ -94,7 +94,7 @@
           </div>
       </div>
     </div>
-    <div class="w3-quarter w3-hover-shadow">
+    <div class="w3-quarter w3-animate-opacity">
       <div class="w3-card-2 w3-white ">
         <img src="mitchellrlee.github.io/images/orangeChicken.jpg" alt="Panda Express" style="width:100%">
           <div class="w3-container">
