--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
   </div>
     <div class="w3-quarter w3-animate-opacity">
       <div class="w3-card-2 w3-white">
-        <img src="mitchellrlee.github.io/images/shopify.png" alt="Shopify" style="width:100%">
+        <a href="class.html"><img src="mitchellrlee.github.io/images/shopify.png" alt="Shopify" style="width:100%"></a>
           <div class="w3-container">
             <h3>Shopify Implentation</h3>
             <p> Migrated many products to Shopify platform for Senior Project.</p>
@@ -90,7 +90,7 @@
         <img src="mitchellrlee.github.io/images/VS.png" alt="Visual Studios" style="width:100%">
           <div class="w3-container">
             <h3>CIS 451</h3>
-            <p>Created Breadcrumbs, Mail, Shopping Cart Functions.</p>
+            <p>Created Breadcrumbs, Mail, Shopping Cart Functions, Connection to SQL DB to store customer information.</p>
           </div>
       </div>
     </div>
