--- a/class.html
+++ b/class.html
@@ -11,27 +11,22 @@
 <!-- Navbar -->
 <div class="w3-top">
  <div class="w3-bar w3-theme-d2 w3-left-align">
-  <a class="w3-bar-item w3-button w3-hide-medium w3-hide-large w3-right w3-hover-white w3-theme-d2" href="javascript:void(0);" onclick="openNav()"><i class="fa fa-bars"></i></a>
-
-  <a href="mitchellrlee.github.io" class="w3-bar-item w3-button w3-teal"><i class="fa fa-home w3-margin-right"></i>Home</a>
-  <a href="#mitchell" class="w3-bar-item w3-button w3-hide-small w3-hover-white">Mitchell Lee</a>
-         <div class="w3-dropdown-hover w3-hide-small">
-    <a href="#recent"><button class="w3-button" title="Notifications">Recent Projects </button> 
-   </a>   
-   
+    <a class="w3-bar-item w3-button w3-hide-medium w3-hide-large w3-right w3-hover-white w3-theme-d2" href="javascript:void(0);" onclick="openNav()"><i class="fa fa-bars"></i></a>
+    <a href="index.html" class="w3-bar-item w3-button w3-teal"><i class="fa fa-home w3-margin-right"></i>Home</a>
+    <a href="#mitchell" class="w3-bar-item w3-button w3-hide-small w3-hover-white">Mitchell Lee</a>
+      <div class="w3-dropdown-hover w3-hide-small">
+        <a href="#recent"><button class="w3-button" title="Notifications">Recent Projects </button></a>   
+      </div>
+    <a href="#tech" class="w3-bar-item w3-button w3-hide-small w3-hover-white">Technical Experience</a>
+    <a href="/resume.html" class="w3-bar-item w3-button w3-hide-small w3-hover-white">Resume</a>
   </div>
-  <a href="#tech" class="w3-bar-item w3-button w3-hide-small w3-hover-white">Technical Experience</a>
-  <a href="mitchellrlee.github.io/pdf/TechnicalResume2017.pdf" class="w3-bar-item w3-button w3-hide-small w3-hover-white">Resume</a>
-
-   </div>
 
   <!-- Navbar on small screens -->
   <div id="navDemo" class="w3-bar-block w3-theme-d2 w3-hide w3-hide-large w3-hide-medium">
     <a href="#mitchell" class="w3-bar-item w3-button">Mitchell Lee</a>
-    <a href="#tech" class="w3-bar-item w3-button">Technical Experience</a>
-    <a href="#pricing" class="w3-bar-item w3-button">Resume</a>
     <a href="#recent" class="w3-bar-item w3-button">Recent Projects</a>
-
+    <a href="#tech" class="w3-bar-item w3-button">Technical Experience</a>
+    <a href="/resume.html" class="w3-bar-item w3-button">Resume</a>
   </div>
 </div>
 
@@ -40,7 +35,7 @@
   <div class="w3-card-4 w3-white">
     <div class="w3-center">
       <h1>CIS 466: Senior Project Shopify</h1>
-      <a href="https://isafetyzone-com.myshopify.com/"><img src="mitchellrlee.github.io/images/shopify_1.png" alt="Vernazza" style="width:1300px;height: 600px;"              class="w3-round"></a>
+      <a href="https://isafetyzone-com.myshopify.com/"><img src="mitchellrlee.github.io/images/shopify_1.png" alt="Shopify Image 1" style="width:1300px;height: 600px;"              class="w3-round"></a>
     </div>
      <div class="w3-container">
         <h3>Shopify Implentation</h3>
@@ -52,11 +47,11 @@
  
     <br><br>
       <div class="w3-center">
-      <img src="mitchellrlee.github.io/images/shopify_2.png" alt="Vernazza" style="width:px;height: 600px;" class="w3-round">
+      <img src="mitchellrlee.github.io/images/shopify_2.png" alt="Shopify Image 2" style="width:px;height: 600px;" class="w3-round">
     </div><br>
 
 <div class="w3-center">
-      <img src="mitchellrlee.github.io/images/shopify_3.png" alt="Vernazza" style="width:px;height: 600px;" class="w3-round">
+      <img src="mitchellrlee.github.io/images/shopify_3.png" alt="Shopify Image 3" style="width:px;height: 600px;" class="w3-round">
     </div>
 
 
