--- a/class.html
+++ b/class.html
@@ -47,11 +47,14 @@
  
     <br><br>
       <div class="w3-center">
-      <img src="mitchellrlee.github.io/images/shopify_2.png" alt="Shopify Image 2" style="width:px;height: 600px;" class="w3-round">
+      <img src="mitchellrlee.github.io/images/shopify_2.PNG" alt="Shopify Image 2" style="width:px;height: 600px;" class="w3-round">
     </div><br>
 
 <div class="w3-center">
-      <img src="mitchellrlee.github.io/images/shopify_3.png" alt="Shopify Image 3" style="width:px;height: 600px;" class="w3-round">
+      <img src="mitchellrlee.github.io/images/shopify_3.PNG" alt="Shopify Image 3" style="width:px;height: 600px;" class="w3-round">
+    </div>
+    <div class="w3-center">
+      <img src="mitchellrlee.github.io/images/shopify_4.PNG" alt="Shopify Image 3" style="width:px;height: 600px;" class="w3-round">
     </div>
 
 
