--- a/class.html
+++ b/class.html
@@ -46,17 +46,18 @@
       </div>
  
     <br><br>
-      <div class="w3-center">
-      <img src="mitchellrlee.github.io/images/shopify_2.PNG" alt="Shopify Image 2" style="width:px;height: 600px;" class="w3-round">
+    <div>
+      <div class="w3-third ">
+      <img src="mitchellrlee.github.io/images/shopify_2.PNG" alt="Shopify Image 2" style="width:1300px;height: 600px;" class="w3-round">
     </div><br>
 
-<div class="w3-center">
-      <img src="mitchellrlee.github.io/images/shopify_3.PNG" alt="Shopify Image 3" style="width:px;height: 600px;" class="w3-round">
+<div class="w3-third ">
+      <img src="mitchellrlee.github.io/images/shopify_3.PNG" alt="Shopify Image 3" style="width:1300px;height: 600px;" class="w3-round">
     </div>
-    <div class="w3-center">
-      <img src="mitchellrlee.github.io/images/shopify_4.PNG" alt="Shopify Image 3" style="width:px;height: 600px;" class="w3-round">
+    <div class="w3-third ">
+      <img src="mitchellrlee.github.io/images/shopify_4.PNG" alt="Shopify Image 4" style="width:1300px;height: 600px;" class="w3-round">
     </div>
-
+</div>
 
   </div>
 <footer class="w3-container w3-padding-32 w3-theme-d1 w3-center">
