--- a/class.html
+++ b/class.html
@@ -45,17 +45,18 @@
           </ul>
       </div>
  </div>
-    <br><br>
-    <div>
+    <div class="w3-row-padding w3-padding-64 w3-theme-l1" id="recent">
+<div class="w3-card-4 w3-white">
       <div class="w3-third ">
-      <img src="mitchellrlee.github.io/images/shopify_2.PNG" alt="Shopify Image 2" style="width:500px;height: 400px;" class="w3-round">
-    </div><br>
+      <img src="mitchellrlee.github.io/images/shopify_2.PNG" alt="Shopify Image 2" style="width:400px;height: 300px;" class="w3-round">
+    </div>
 
 <div class="w3-third ">
-      <img src="mitchellrlee.github.io/images/shopify_3.PNG" alt="Shopify Image 3" style="width:500px;height: 400px;" class="w3-round">
+      <img src="mitchellrlee.github.io/images/shopify_3.PNG" alt="Shopify Image 3" style="width:400px;height: 300px;" class="w3-round">
     </div>
     <div class="w3-third ">
-      <img src="mitchellrlee.github.io/images/shopify_4.PNG" alt="Shopify Image 4" style="width:500px;height: 400px;" class="w3-round">
+      <img src="mitchellrlee.github.io/images/shopify_4.PNG" alt="Shopify Image 4" style="width:400px;height: 300px;" class="w3-round">
+    </div>
     </div>
 </div>
 
