--- a/class.html
+++ b/class.html
@@ -44,22 +44,34 @@
             <li>Modified site to fit B2C</li>
           </ul>
       </div>
- </div>
-    <div class="w3-row-padding w3-padding-64 w3-theme-l1" id="recent">
-<div class="w3-card-4 w3-white">
-      <div class="w3-third ">
-      <img src="mitchellrlee.github.io/images/shopify_2.PNG" alt="Shopify Image 2" style="width:400px;height: 300px;" class="w3-round">
+      </div>
+      </div>
+ <div class="w3-row-padding w3-padding-64 w3-theme-l1" id="recent">
+  <div class="w3-card-4 w3-white">
+<div class="w3-third ">
+
+      <a href="#fullimage1"><img src="mitchellrlee.github.io/images/shopify_2.PNG" alt="Shopify Image 2" style="width:500px;height: 400px;" class="w3-round"></a>
     </div>
 
 <div class="w3-third ">
-      <img src="mitchellrlee.github.io/images/shopify_3.PNG" alt="Shopify Image 3" style="width:400px;height: 300px;" class="w3-round">
+      <img src="mitchellrlee.github.io/images/shopify_3.PNG" alt="Shopify Image 3" style="width:500px;height: 400px;" class="w3-round">
     </div>
     <div class="w3-third ">
-      <img src="mitchellrlee.github.io/images/shopify_4.PNG" alt="Shopify Image 4" style="width:400px;height: 300px;" class="w3-round">
+      <img src="mitchellrlee.github.io/images/shopify_4.PNG" alt="Shopify Image 4" style="width:500px;height: 400px;" class="w3-round">
     </div>
     </div>
 </div>
+</div>
 
+  <div id="fullimage1" class="w3-modal">
+    <div class="w3-modal-content">
+      <div class="w3-container">
+        <span onclick="document.getElementById('fullimage1').style.display='none'" class="w3-button w3-display-topright">&times;</span
+       <img src="mitchellrlee.github.io/images/shopify_2.PNG" style="width: 1300px; height: 600px;" class="w3-round">
+      </div>
+    </div>
+  </div>
+</div>
   
 <footer class="w3-container w3-padding-32 w3-theme-d1 w3-center">
    <p>&copy; 2017 Mitchell R. Lee</p>
