--- a/class.html
+++ b/class.html
@@ -37,51 +37,38 @@
       <h1>CIS 466: Senior Project Shopify</h1>
       <a href="https://isafetyzone-com.myshopify.com/"><img src="mitchellrlee.github.io/images/shopify_1.png" alt="Shopify Image 1" style="width:1300px;height: 600px;"              class="w3-round"></a>
     </div>
-     <div class="w3-container">
-        <h3>Shopify Implentation</h3>
-          <ul>
-            <li>Uploaded many products with variances to Shopify</li>
-            <li>Modified site to fit B2C</li>
-          </ul>
+     <div class="w3-container w3-center">
+        <h3>Shopify Front Page</h3>
+            <p>Assisted with customization of subcategories.</p>
+            <p>Helped with redesigning UI for customers.</p>
       </div>
+ 
+    <br><br>
+      <div class="w3-center">
+      <a href="https://docs.google.com/spreadsheets/d/1rFnnLaEz9ci0crDDoJhQ0AYyJWSH2U2L9Hm8eYZJ19s/edit?usp=sharing"><img src="mitchellrlee.github.io/images/shopify_2.PNG" alt="Vernazza" style="width:px;height: 600px;" class="w3-round"></a>
+      <div class="w3-container w3-center">
+       <h3>Tags/Multiple Products Page</h3>
+            <p>Linked to Excel page showing example of upload format.</p>
+            <p>Uploaded thousands of variances to Shopify.</p>
+            <p>Used functions and VBA to help simplify upload.</p>
+            <p>Created custom tags for user to find products.</p>
+          
+
       </div>
+    </div><br>
+
+<div class="w3-center">
+
+      <img src="..\MLEE_PersonalSite\images\shopify_3.png" alt="Vernazza" style="width:px;height: 600px;" class="w3-round">
+      <div class="w3-container w3-center">
+        <h3>Product Page</h3>
+            <p>Created function to display variant SKU.</p>
+            <p>Configured HTML tags for description.</p>
       </div>
- <div class="w3-row-padding w3-padding-64 w3-theme-l1" id="recent">
-  <div class="w3-card-4 w3-white">
-<div class="w3-third ">  
-    <button onclick="document.getElementById('id01').style.display='block'" class="w3-button w3-xlarge w3-theme w3-hover-teal" title="Go To W3.CSS"><img src="mitchellrlee.github.io/images/shopify_2.PNG" alt="Shopify Image 2" style="width:500px;height: 400px;" class="w3-round"></button>
-  </div>
-     
-      <img src="mitchellrlee.github.io/images/shopify_2.PNG" alt="Shopify Image 2" style="width:500px;height: 400px;" class="w3-round">
     </div>
 
-<div class="w3-third ">
-      <img src="mitchellrlee.github.io/images/shopify_3.PNG" alt="Shopify Image 3" style="width:500px;height: 400px;" class="w3-round">
-    </div>
-    <div class="w3-third ">
-      <img src="mitchellrlee.github.io/images/shopify_4.PNG" alt="Shopify Image 4" style="width:500px;height: 400px;" class="w3-round">
-    </div>
-    </div>
-</div>
-</div>
-
-
-
-<!-- Modal -->
-<div id="id01" class="w3-modal">
-  <div class="w3-modal-content w3-card-4 w3-animate-top">
-    <header class="w3-container w3-teal w3-display-container"> 
-      <span onclick="document.getElementById('id01').style.display='none'" class="w3-button w3-teal w3-display-topright"><i class="fa fa-remove"></i></span>
-      <img src="mitchellrlee.github.io/images/shopify_2.PNG" style="width: 1300px; height: 600px;" class="w3-round">
-    </header>
 
   </div>
-</div>
-
-
-
-
-  
 <footer class="w3-container w3-padding-32 w3-theme-d1 w3-center">
    <p>&copy; 2017 Mitchell R. Lee</p>
 </footer>
