--- a/index.html
+++ b/index.html
@@ -43,19 +43,19 @@
   <h2>About Me</h2>
     <p>Hi all, I just graduated from Cal Poly Pomona as a Business Major in Computer Information Systems. A few of my interests outside of programming are photography, bike riding, dancing, and cooking!</p>
   <div class="w3-row"><br>
-    <div class="w3-quarter w3-hover-opacity w3-animate-left">
+    <div class="w3-quarter w3-animate-left">
       <img src="mitchellrlee.github.io/images/camera.jpg" alt="camera" style="width:200px; height: 150px;" class="w3-circle">
       <h3>Photography</h3>
     </div>
-    <div class="w3-quarter w3-hover-opacity w3-animate-top"> 
+    <div class="w3-quarter w3-animate-top"> 
       <img src="mitchellrlee.github.io/images/bike.jpg" alt="bike" style="width:200px; height: 150px;" class="w3-circle">
       <h3>Road Biking</h3>
     </div>
-    <div class="w3-quarter w3-hover-opacity w3-animate-bottom">  
+    <div class="w3-quarter w3-animate-bottom">  
       <img src="mitchellrlee.github.io/images/bboy.JPG" alt="dance" style="width:200px; height: 150px;" class="w3-circle">
       <h3>Dancing</h3>
     </div>
-    <div class="w3-quarter w3-hover-opacity w3-animate-right">
+    <div class="w3-quarter w3-animate-right">
       <img src="mitchellrlee.github.io/images/baking.JPG" alt="cake" style="width:200px; height: 150px;" class="w3-circle">
       <h3>Baking</h3>
     </div>
@@ -69,10 +69,10 @@
   </div>
     <div class="w3-quarter w3-animate-opacity">
       <div class="w3-card-2 w3-white">
-        <img src="mitchellrlee.github.io/images/shopify.png" alt="Shopify" style="width:100%">
+        <a href="class.html"><img src="mitchellrlee.github.io/images/shopify.png" alt="Shopify" style="width:100%"></a>
           <div class="w3-container">
             <h3>Shopify Implentation</h3>
-            <p> Migrated many products to Shopify platform for Senior Project.</p>
+            <p> Migrated products to Shopify platform for Senior Project.</p>
           </div>
       </div>
     </div>
@@ -81,7 +81,7 @@
         <img src="mitchellrlee.github.io/images/documentation.png" alt="Documentation" style="width:100%">
           <div class="w3-container">
             <h3>CWIRS Documentation</h3>
-            <p>Assisted with modifying and testing Visual basic on Visual Studios.</p>
+            <p>Assisted with modifying and testing Code on Visual Studios.</p>
         </div>
       </div>
     </div>
