--- a/class.html
+++ b/class.html
@@ -45,7 +45,7 @@
  
     <br><br>
       <div class="w3-center">
-      <a href="https://docs.google.com/spreadsheets/d/1rFnnLaEz9ci0crDDoJhQ0AYyJWSH2U2L9Hm8eYZJ19s/edit?usp=sharing"><img src="mitchellrlee.github.io/images/shopify_2.PNG" alt="Vernazza" style="width:px;height: 600px;" class="w3-round"></a>
+      <a href="https://docs.google.com/spreadsheets/d/1rFnnLaEz9ci0crDDoJhQ0AYyJWSH2U2L9Hm8eYZJ19s/edit?usp=sharing"><img src="mitchellrlee.github.io/images/shopify_2.PNG" alt="Shopify Image 2" style="width:px;height: 600px;" class="w3-round"></a>
       <div class="w3-container w3-center">
        <h3>Tags/Multiple Products Page</h3>
             <p>Linked to Excel page showing example of upload format.</p>
@@ -59,7 +59,7 @@
 
 <div class="w3-center">
 
-      <img src="..\MLEE_PersonalSite\images\shopify_3.png" alt="Vernazza" style="width:px;height: 600px;" class="w3-round">
+      <img src="mitchellrlee.github.io/images/shopify_3.PNG" alt="Shopify Image 3" style="width:px;height: 600px;" class="w3-round">
       <div class="w3-container w3-center">
         <h3>Product Page</h3>
             <p>Created function to display variant SKU.</p>
