--- a/class.html
+++ b/class.html
@@ -35,7 +35,7 @@
   <div class="w3-card-4 w3-white">
     <div class="w3-center">
       <h1>CIS 466: Senior Project Shopify</h1>
-      <a href="https://isafetyzone-com.myshopify.com/"><img src="mitchellrlee.github.io/images/shopify_1.png" alt="Shopify Image 1" style="width:1300px;min-height: 300px; max-height: 1100px;"              class="w3-round"></a>
+      <a href="https://isafetyzone-com.myshopify.com/"><img src="mitchellrlee.github.io/images/shopify_1.png" alt="Shopify Image 1" style="width:1300px;height:300px;"              class="w3-round"></a>
     </div>
      <div class="w3-container w3-center">
         <h3>Shopify Front Page</h3>
@@ -45,7 +45,7 @@
  
     <br><br>
       <div class="w3-center">
-      <a href="https://docs.google.com/spreadsheets/d/1rFnnLaEz9ci0crDDoJhQ0AYyJWSH2U2L9Hm8eYZJ19s/edit?usp=sharing"><img src="mitchellrlee.github.io/images/shopify_2.PNG" alt="Shopify Image 2" style="min-height: 300px; max-height: 1100px;" class="w3-round"></a>
+      <a href="https://docs.google.com/spreadsheets/d/1rFnnLaEz9ci0crDDoJhQ0AYyJWSH2U2L9Hm8eYZJ19s/edit?usp=sharing"><img src="mitchellrlee.github.io/images/shopify_2.PNG" alt="Shopify Image 2" style="width:1300px;height:300px;" class="w3-round"></a>
       <div class="w3-container w3-center">
        <h3>Tags/Multiple Products Page</h3>
             <p>Linked to Excel page showing example of upload format.</p>
@@ -59,8 +59,7 @@
 
 <div class="w3-center">
 
-      <img src="mitchellrlee.github.io/images/shopify_3.PNG" alt="Shopify Image 3" style="min-height: 300px; max-height: 1100px;" class="w3-round">
-      <div class="w3-container w3-center">
+      <img src="mitchellrlee.github.io/images/shopify_3.PNG" alt="Shopify Image 3" style="width:1300px;height:300px; class="w3-container w3-center">
         <h3>Product Page</h3>
             <p>Created function to display variant SKU.</p>
             <p>Configured HTML tags for description.</p>
