--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
     </div>
     <div class="w3-quarter w3-animate-opacity">
       <div class="w3-card-2 w3-white ">
-        <img src="mitchellrlee.github.io/images/orangeChicken.jpg" alt="Panda Express" style="width:100%">
+         <a href="class_Panda.html"><img src="mitchellrlee.github.io/images/orangeChicken.jpg" alt="Panda Express" style="width:100%"></a>
           <div class="w3-container">
             <h3>Panda Express Button</h3>
             <p>Assisted with creation of Orange Chicken with bacon button.</p>
