--- a/class_Panda.html
+++ b/class_Panda.html
@@ -53,7 +53,7 @@
     <br><br>
       <div class="w3-container w3-center w3-border">
       <h1>POS Menu</h1>
-        <img src="mitchellrlee.github.io/images/Panda Express.PNG" alt="" style="width: 100%;min-height: 250px; max-height: 1200px;" class="w3-round">
+        <img src="mitchellrlee.github.io/images/Panda Express.PNG" alt="" style="min-width: 400px; min-width:800px;min-height: 250px; max-height: 1200px;" class="w3-round">
           <h3>POS Menu</h3>
             <p>The button would appear in the system's backend.</p>
             <p>Configured menu easiest to user when placing button.</p>
