--- a/class.html
+++ b/class.html
@@ -35,7 +35,22 @@
   <div class="w3-card-4 w3-white">
     <div class="w3-center">
       <h1>CIS 466: Senior Project Shopify</h1>
-      <a href="https://isafetyzone-com.myshopify.com/"><img src="mitchellrlee.github.io/images/shopify_1.png" alt="Shopify Image 1" style="width:1300px;height:600px;"              class="w3-round"></a>
+      <img src="mitchellrlee.github.io/images/scrum.jpg" alt="Scrum Image" style="width: 800px; height: 400px;" class="w3-round">
+      <div class="w3-content">
+        <h3>Vision</h3>
+        <h2>To create a revamped website of the existing B2B Esafety Supplies to a B2C website ISafetyZone.</h2>
+        <h3>Tools Used</h3>
+        <li>
+          <ul>Shopify</ul>
+          <ul>JIRA</ul>
+          <ul>Google Drive</ul>
+          <ul>Microsoft Excel</ul>
+        </li>
+      <img src="mitchellrlee.github.io/images/esafety.png" alt="Esafety Supplies" style="width: 800px; height: 400px;" class="w3-round">
+
+      <img src="mitchellrlee.github.io/images/arrowdownred.png" alt="Down Arrow">
+
+      <a href="https://isafetyzone-com.myshopify.com/"><img src="mitchellrlee.github.io/images/shopify_1.png" alt="Shopify Image 1" style="width:1300px;height:600px;" class="w3-round"></a>
     </div>
      <div class="w3-container w3-center">
         <h3>Shopify Front Page</h3>
